test-expected/large/files/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: filesservice
    foo.com/duversion: 2.10.4-20190910.1568136785094
    foo.com/version: 2.10.4
  labels:
    app.kubernetes.io/name: files
    helm.sh/chart: files-2.10.4
  name: files
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: files
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: files
        app.kubernetes.io/name: files
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        - configMapRef:
            name: foo-java-config
        image: repo.foo.com/dmdatap-125.0.0-x64_redhat_linux_7-docker-prod/foo-files:2.10.4-20190910.1568136785094
        imagePullPolicy: IfNotPresent
        name: files
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
